Moves Grid bfs to utils